--- a/client/src/utils/styles/global.css
+++ b/client/src/utils/styles/global.css
@@ -7,3 +7,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
 }
+
+@font-face {
+  font-family: 'LuckiestGuy-Regular';
+  src: local('LuckiestGuy-Regular'),
+  url('./fonts/LuckiestGuy-Regular.ttf') format('truetype');
+}
+
+h1 {
+  font-family: LuckiestGuy-Regular, sans-serif;
+  font-size: 70px;
+}
