navigationbar är tillbaka
Routing.ts är uppdaterad med rätt typescript.

--- a/client/src/view/UserView.module.css
+++ b/client/src/view/UserView.module.css
@@ -1,6 +1,7 @@
 .section {
     display: grid;
     grid-template-columns: auto 55% auto;
+    margin-top: 50px;
 }
 
 .emty {
@@ -10,9 +11,13 @@
 .userDiv {
     border: solid 2px grey;
     border-radius: 15px;
+    margin-top: 50px;
 }
 
 .imageUser {
     max-width: 100px;
 }
 
+.inputDiv {
+    background-color: yellow;
+}
