--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -4,11 +4,10 @@
 
 .headerContainer {
     max-width: 100%;
-    height: 100px;
+    height: 50px;
     margin: 0;
     padding: 0;
     background-color: #A2D8FA;
-
 }
 
 
@@ -21,14 +20,15 @@
 
 /*desktop*/
 @media only screen and (min-width: 1200px) {
-    /*.headerContainer {*/
-    /*    max-width: 100%;*/
-    /*}*/
-
     .containerDiv {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-row-gap: 1fr;
+    }
+
+
+    .headerContainer {
+        height: 180px;
     }
 
     .itemA {
@@ -40,7 +40,7 @@
     }
 
     .text {
-margin-left: 400px;
-    padding-right: 30px;
+        margin-left: 400px;
+        padding-right: 30px;
     }
 }
