--- a/client/src/view/StartView.module.css
+++ b/client/src/view/StartView.module.css
@@ -17,7 +17,7 @@
     color: grey;
 }
 
-input {
+.input {
     border-radius: 7px;
     padding: 8px;
     width: 250px;
@@ -64,7 +64,7 @@ hr {
         text-align: center;
     }
 
-    input {
+    .input {
         width: 200px;
         margin: 0 100px 5px;
     }
