--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -1,5 +1,7 @@
 .text {
     margin-left: 150px;
+    color: steelblue;
+    font-size: 10vh;
 }
 
 .headerContainer {
@@ -20,6 +22,15 @@
 
 /*desktop*/
 @media only screen and (min-width: 1200px) {
+    .headerContainer {
+        height: 190px;
+    }
+
+    .containerDiv {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 260px;
+    }
 
     .itemA {
         background-color: #A2D8FA;
@@ -28,4 +39,5 @@
     .itemB {
         background-color: #A2D8FA;
     }
+
 }
