--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -1,7 +1,16 @@
+/*mobile*/
 .text {
-    margin-left: 150px;
+font-size: 4vh;
+    text-align: center;
     color: steelblue;
-    font-size: 10vh;
+}
+.imageSmurfar {
+    height: 70px;
+}
+.containerDiv {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 100px;
 }
 
 .headerContainer {
@@ -10,13 +19,20 @@
     margin: 0;
     padding: 0;
     background-color: #A2D8FA;
-
 }
 
 /*tablet*/
 @media only screen and (min-width: 768px) {
     .headerContainer {
-        max-width: 100%;
+        height: 8vh;
+    }
+    .text {
+        font-size: 3vh;
+        text-align: center;
+        margin-left: 100px;
+    }
+    .imageSmurfar {
+        height: 70px;
     }
 }
 
@@ -39,5 +55,8 @@
     .itemB {
         background-color: #A2D8FA;
     }
-
+    .text {
+        margin-left: 150px;
+        font-size: 10vh;
+    }
 }
