--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -59,4 +59,7 @@ font-size: 4vh;
         margin-left: 150px;
         font-size: 10vh;
     }
+    .imageSmurfar {
+        height: 140px;
+    }
 }
