--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -1,26 +1,65 @@
+/*mobile*/
 .text {
-    margin: 0;
+font-size: 4vh;
     text-align: center;
+    color: steelblue;
+}
+.imageSmurfar {
+    height: 70px;
+}
+.containerDiv {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 100px;
 }
 
 .headerContainer {
     max-width: 100%;
-    height: 100px;
-    background-color: #22577E;
+    height: 50px;
     margin: 0;
     padding: 0;
+    background-color: #A2D8FA;
 }
 
 /*tablet*/
 @media only screen and (min-width: 768px) {
     .headerContainer {
-        max-width: 100%;
+        height: 8vh;
+    }
+    .text {
+        font-size: 3vh;
+        text-align: center;
+        margin-left: 100px;
+    }
+    .imageSmurfar {
+        height: 70px;
     }
 }
 
 /*desktop*/
 @media only screen and (min-width: 1200px) {
     .headerContainer {
-max-width: 100%;
+        height: 190px;
+    }
+
+    .containerDiv {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 260px;
+    }
+
+    .itemA {
+        background-color: #A2D8FA;
+    }
+
+    .itemB {
+        background-color: #A2D8FA;
+    }
+    .text {
+        margin-left: 150px;
+        font-size: 10vh;
+    }
+    .imageSmurfar {
+        height: 140px;
     }
 }
