--- a/client/src/view/StartView.module.css
+++ b/client/src/view/StartView.module.css
@@ -25,7 +25,7 @@
     margin: 0 50px 5px;
 }
 
-button {
+.button {
     width: 270px;
     border-radius: 7px;
     border: grey solid 1px;
@@ -69,7 +69,7 @@ hr {
         margin: 0 100px 5px;
     }
 
-    button {
+    .button {
         width: 220px;
         margin: 10px 100px 10px;
     }
@@ -124,7 +124,7 @@ hr {
     margin-left: 40px;
 }
 
-.buttonPopupWindow {
+.buttonCreateNewAccount {
     background-color: #00a854;
     margin-top: 10px;
     width: 220px;
