--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -1,9 +1,7 @@
 .cardDiv {
-    background-color: rgb(151, 182, 208);
-    margin: .25em;
-    padding: .5em;
-    font-size: large;
-    transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    background-color: whitesmoke;
+    max-width: 50%;
+    margin-left: 400px;
 }
 
 .cardMsg {
@@ -18,4 +16,17 @@
     place-self: flex-end;
     border: 2px darkgray double;
     font-size: 1em;
+}
+
+.username {
+    background-color: #4682B4;
+    padding: 10px;
+}
+
+.message {
+    padding: 10px;
+}
+
+.timestamps {
+    padding: 10px;
 }
