--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -3,9 +3,12 @@
     margin: .25em;
     padding: .5em;
     font-size: large;
-    transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
+.cardDiv:hover {
+    padding: .75em;
+}
 .cardMsg {
     background-color: rgba(44, 48, 50, 0.709);
     padding: .25em; 
