fixat så det står "updating.." i en sekund när vi hämtar nya meddelanden.

--- a/client/src/view/messageView/MessageView.module.css
+++ b/client/src/view/messageView/MessageView.module.css
@@ -29,9 +29,15 @@
 .labelTextArea {
     background-color: whitesmoke;
     border-radius: 5px;
+    border: none;
 }
 
 .h1Text {
     color: #4682B4;
     font-family: "Quicksand Light", sans-serif;
+}
+
+.statusOfMessages {
+    font-size: smaller;
+    place-self: flex-end;
 }
