--- a/client/src/components/navigationBar/NavigationBar.module.css
+++ b/client/src/components/navigationBar/NavigationBar.module.css
@@ -27,3 +27,9 @@ li a:hover:not(.active) {
     border-bottom: 1px solid white;
     color: darkslategrey;
 }
+
+li:last-child {
+    place-self: flex-end;
+    border-left: 5px solid white;
+    padding-left: 10px;
+}
