--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -16,7 +16,7 @@ font-size: 4vh;
 .headerContainer {
     max-width: 100%;
     height: 50px;
-    margin: 0;
+    margin: 25px;
     padding: 0;
     background-color: #A2D8FA;
 }
