--- a/client/src/view/MessageView.module.css
+++ b/client/src/view/MessageView.module.css
@@ -7,7 +7,7 @@
 }
 
 .messageWrap {
-    background-color: hsla(green, 234, 24, .45);
+    background-color: #00a854;
     padding: 2em;
     display: flex;
     flex-direction: column-reverse;
