--- a/client/src/view/StartView.module.css
+++ b/client/src/view/StartView.module.css
@@ -74,7 +74,7 @@
         margin: 70px;
         border: solid 1px;
         padding-top: 30px;
-        background-color: whitesmoke;
+        background: linear-gradient(to left, rgba(162, 216, 250, 1) 0%, rgba(237, 162, 161, 1) 100%);
         border-radius: 15px;
     }
 
@@ -82,6 +82,16 @@
         max-width: 80%;
         margin-left: 0;
 
+    }
+    .button{
+        background-color: #22577E;
+        width: 220px;
+        margin: 10px 100px 10px;
+    }
+    .buttonCreateNewAccount {
+        background-color: #00a854;
+        width: 220px;
+        margin: 10px 100px 10px;
     }
 }
 
@@ -116,11 +126,6 @@
     margin-left: 40px;
 }
 
-/*.buttonCreateNewAccount {
-    background-color: #00a854;
-    margin-top: 10px;
-}*/
-
 .close {
     width: 30px;
     position: absolute;
@@ -141,11 +146,11 @@
 
 
     .imageSmurf {
-        max-width: 40%;
-        margin-top: 30px;
+        max-width: 28%;
+        margin-top: auto;
     }
 
     .section {
-        margin-left: 400px;
+        margin-left: auto;
     }
 }
