--- a/client/src/view/messageView/MessageView.module.css
+++ b/client/src/view/messageView/MessageView.module.css
@@ -1,3 +1,4 @@
+/*mobile*/
 .sectionContainer {
     text-align: center;
 }
@@ -7,17 +8,17 @@
     width: 80px;
     padding: 5px;
     border-radius: 10px;
-    margin-right: 160px;
+    margin-right: auto;
 }
 
 .sectionButton {
     text-align: center;
-    margin-right: 290px;
+    margin-right: auto;
     margin-bottom: 100px;
 }
 
 .usernameInput {
-    margin-right: 315px;
+    margin-right: auto;
 }
 
 .input {
@@ -29,7 +30,9 @@
 .labelTextArea {
     background-color: whitesmoke;
     border-radius: 5px;
-    border: none;
+    padding: 5px;
+    margin-right: auto;
+    border: #EDA2A1;
 }
 
 .h1Text {
