--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -4,7 +4,7 @@
 }
 
 .profileWrapper {
-    /* padding: 5px; */
+    padding: 5px;
     color: #333;
 }
 
@@ -17,7 +17,7 @@
     position: absolute;
     background-color: #f1f1f1;
     min-width: 200px;
-    /* padding: 12px 16px; */
+    padding: 12px 16px;
     z-index: 10;
     /* margin-top: 5px; */
 }
