--- a/client/src/components/navigationBar/NavigationBar.module.css
+++ b/client/src/components/navigationBar/NavigationBar.module.css
@@ -43,7 +43,7 @@ li:last-child {
 @media screen and (min-width: 1200px) {
     .nav {
         background-color: #eda2a1;
-        margin: 100px 0;
+        margin: 5% 0;
         padding: 15px;
     }
     li {
