småfix med navbar ++
Det går att lösa så "Profile" komponenten hamnar i slutet av navbar istället om man använder "position: absolute;" i css, men det känns som ett dåligt sätt att göra det så jag vill hitta en bättre lösning.

--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -4,8 +4,8 @@
 }
 
 .profileWrapper {
-    padding: 5px;
     color: #333;
+    position: flex;
 }
 
 .disabledLink {
@@ -17,13 +17,12 @@
     position: absolute;
     background-color: #f1f1f1;
     min-width: 200px;
-    padding: 12px 16px;
     z-index: 10;
     /* margin-top: 5px; */
-}
+}                                       
 
 .profileWrapper:hover .profileDropdown {
-    display: block;
+    display: none;
 }
 
 /* 
