--- a/client/src/view/RegisterView.module.css
+++ b/client/src/view/RegisterView.module.css
@@ -25,6 +25,12 @@
     margin: 0 50px 5px;
 }
 
+.label {
+    margin-left: 110px;
+    font-family: 'Fira Code', monospace;
+    font-size: 1.1em;
+}
+
 .button {
     background-color: #22577E;
     width: 270px;
