--- a/client/src/components/navigationBar/NavigationBar.module.css
+++ b/client/src/components/navigationBar/NavigationBar.module.css
@@ -6,37 +6,25 @@
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    display:  flex;
-    
+    display: flex;
 }
 
 .ul {
+    text-align: center;
     list-style-type: none;
-    margin: 0;
-    /* padding: 0 20px 0; */
+    padding: 10px 0 10px;
     width: 100%;
 }
-
-/* .li {
-    float: left;
-    padding: 0 20px 0 0;
-} */
 
 li a {
     color: white;
     text-align: center;
-    /* padding: 10px; */
     text-decoration: none;
 }
 
 li a:hover:not(.active) {
     border-bottom: 1px solid white;
     color: darkslategrey;
-}
-
-.liLast {
-    /* margin: auto;
-    place-self: flex-end; */
 }
 
 /*Tablet*/
@@ -48,9 +36,11 @@ li a:hover:not(.active) {
         margin: 5% 0;
         padding: 15px;
     }
+
     li {
         float: left;
     }
+
     a {
         display: block;
         padding: 8px;
