--- a/client/src/view/RegisterView.module.css
+++ b/client/src/view/RegisterView.module.css
@@ -1,4 +1,8 @@
 /*mobile*/
+.section {
+    margin: 100px 0 0 0;
+}
+
 .mainGridContainer {
     padding: 10px;
     display: grid;
@@ -75,7 +79,7 @@
         width: 200px;
         margin: 0 100px 5px;
     }
-    
+
     .section {
         margin: 70px;
         border: solid 1px;
@@ -89,11 +93,13 @@
         margin-left: 0;
 
     }
-    .button{
+
+    .button {
         background-color: #22577E;
         width: 220px;
         margin: 10px 100px 10px;
     }
+
     .buttonCreateNewAccount {
         background-color: #00a854;
         width: 220px;
@@ -149,7 +155,6 @@
 
 /*desktop*/
 @media only screen and (min-width: 1200px) {
-
 
     .imageSmurf {
         max-width: 28%;
