--- a/client/src/view/RegisterView.module.css
+++ b/client/src/view/RegisterView.module.css
@@ -30,7 +30,6 @@
 }
 
 .label {
-    margin-left: 110px;
     font-family: 'Fira Code', monospace;
     font-size: 1.1em;
 }
@@ -55,56 +54,9 @@
 }
 
 .imageSmurf {
-    max-width: 40%;
+    max-width: 60%;
     margin-top: 30px;
     margin-left: 100px;
-}
-
-/*tablet*/
-@media only screen and (min-width: 768px) {
-    .mainGridContainer {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .item {
-        margin-top: 70px;
-    }
-
-
-    .textOne {
-        text-align: center;
-    }
-
-    .input {
-        width: 200px;
-        margin: 0 100px 5px;
-    }
-
-    .section {
-        margin: 70px;
-        border: solid 1px;
-        padding-top: 30px;
-        background: linear-gradient(to left, rgba(162, 216, 250, 1) 0%, rgba(237, 162, 161, 1) 100%);
-        border-radius: 15px;
-    }
-
-    .imageSmurf {
-        max-width: 80%;
-        margin-left: 0;
-
-    }
-
-    .button {
-        background-color: #22577E;
-        width: 220px;
-        margin: 10px 100px 10px;
-    }
-
-    .buttonCreateNewAccount {
-        background-color: #00a854;
-        width: 220px;
-        margin: 10px 100px 10px;
-    }
 }
 
 .popup, .overlay {
@@ -153,15 +105,64 @@
     background-color: #ed4e4e;
 }
 
-/*desktop*/
-@media only screen and (min-width: 1200px) {
+
+/*tablet*/
+@media only screen and (min-width: 768px) {
+    .mainGridContainer {
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
+    }
+
+    .item {
+        margin-top: 70px;
+    }
+
+    .textOne {
+        text-align: center;
+    }
+
+    .inputOne {
+        width: 200px;
+        margin: 0 100px 5px;
+    }
+
+    .section {
+        margin: 70px;
+        border: solid 1px;
+        padding-top: 30px;
+        background: linear-gradient(to left, rgba(162, 216, 250, 1) 0%, rgba(237, 162, 161, 1) 100%);
+        border-radius: 15px;
+    }
 
     .imageSmurf {
-        max-width: 28%;
+        max-width: 45%;
+        margin-left: 0;
+
+    }
+
+
+    .buttonCreateNewAccount {
+        background-color: #00a854;
+        width: 220px;
+        margin: 10px 100px 10px;
+    }
+}
+
+/*desktop*/
+@media only screen and (min-width: 1200px) {
+    .mainGridContainer {
+        grid-template-columns: repeat(3, 1fr);
+        text-align: center;
+    }
+
+    .imageSmurf {
+        max-width: 40%;
         margin-top: auto;
     }
 
     .section {
+        max-inline-size: min-content;
         margin-left: auto;
+        align-self: center;
     }
 }
